@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/scrot
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/scrot/ChangeLog,v 1.19 2007/03/19 02:10:35 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/scrot/ChangeLog,v 1.20 2007/03/19 17:15:05 drac Exp $
+
+  19 Mar 2007; Samuli Suominen <drac@gentoo.org> scrot-0.8.ebuild:
+  Remove README and TODO from dodoc; empty or same as INSTALL.
 
   19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
   Remove ka0ttic from metadata.xml due to retirement.
